qa/datagrid-service/ingresses.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: datagrid-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - datagrid-api.qa.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: datagrid-api.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: datagrid-service
            servicePort: 5000
